# pydata-2025-conference-bazel-ai-pkgs-tutorial

./: .bazelrc  .bazelrc.minimal  .gitignore  BUILD  CITATION.cff  LICENSE  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements.txt  requirements_lock.txt
evaluation_results/: evaluation_report.txt
examples/01-basic-ml-pipeline/: BUILD  README.md  data_processor.py  test_data_processing.py
examples/01-basic-ml-pipeline/data/: US-pumpkins.csv
examples/01-data-processing/: BUILD  README.md  data_processor.py  simple_processor.py
examples/02-basic-ml/: BUILD  README.md  linear_regression.py  ml_pipeline.py  polynomial_regression.py  test_ml_examples.py
examples/03-model-evaluation/: BUILD  README.md  cross_validation.py  model_drift_detection.py  model_evaluator.py  test_evaluation.py
examples/04-serve-model/: BUILD  README.md  api_client.py  demo.py  health_monitor.py  model_manager.py  model_server.py  summary.py  test_model_server.py
outputs/: processed_pumpkins.csv
outputs/02-basic-ml/: model_comparison_summary.txt
